# PIP_KIMI2comfyui

./: PIP_kimi.py  PUA大语言模型提示词大全.csv  README.md  __init__.py  key.txt  pyproject.toml  requirements.txt
workflow/: kimi的json模式.json  workflow.json
